--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -469,26 +469,28 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
-.absolute {
-  position: absolute;
-}
 .bottom-0 {
   bottom: 0px;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 .ml-4 {
   margin-left: 1rem;
 }
-.h-6 {
-  height: 1.5rem;
-}
-.w-6 {
-  width: 1.5rem;
+.flex {
+  display: flex;
 }
 .w-full {
   width: 100%;
 }
-.flex-none {
-  flex: none;
+.scale-50 {
+  --tw-scale-x: .5;
+  --tw-scale-y: .5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.flex-col {
+  flex-direction: column;
 }
 .border-b {
   border-bottom-width: 1px;
@@ -497,24 +499,23 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
-.fill-sky-100 {
-  fill: #e0f2fe;
-}
-.stroke-sky-500 {
-  stroke: #0ea5e9;
-}
-.stroke-2 {
-  stroke-width: 2;
-}
 .p-3 {
   padding: 0.75rem;
 }
 .text-center {
   text-align: center;
 }
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .text-xs {
   font-size: 0.75rem;
