--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -472,6 +472,9 @@ video {
 .bottom-0 {
   bottom: 0px;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
 .ml-4 {
   margin-left: 1rem;
 }
@@ -500,6 +503,10 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .text-xs {
   font-size: 0.75rem;
